--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -177,3 +177,13 @@ tag:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
       when: never
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+
+dockerhub-push:
+  stage: release
+  image: $DEVTOOLS_IMG
+  extends:
+    - .devops-docker-cicd
+  script:
+    - ./scripts/release.sh
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^release-[\d]+\.[\d]+\.[\d]+/'
