Capture code coverage
go test does not have a good way to capture
unit-test coverage as part of test runs. This
commit captures the error code of the unit test
run, runs the coverage generation and then exits
based on the test status.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,7 +104,7 @@ unit-test-data-race:
       always
     paths:
       - results
-    expire_in: 3 hours
+    expire_in: 1 day
     reports:
       junit: results/report.xml
   rules:
