Update release script to handle dual artifacts
We should keep a single release script that will
publish docker images and helm charts for the
official release. This commit just updates the
current release script to handle both artifact
types. Helm logic will follow.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -195,6 +195,6 @@ dockerhub-push:
   extends:
     - .devops-docker-cicd
   script:
-    - ./scripts/release.sh
+    - ./scripts/release.sh docker-image
   rules:
     - if: '$CI_COMMIT_TAG =~ /^release-[\d]+\.[\d]+\.[\d]+/'
