Publish helm charts for development
Helm will be used as part of the user story to
deploy the operator but it is also a good tool to
deploy the operator while developing it.

This commit adds the ability to publish helm
charts:
- to the dev registry for local iteration.
- to the regular devops registry for CI iteration
  and testing.

This will also help us test the helm chart itself.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,7 @@ lint + unit-test + build:
         time make test
       fi
       time make publish
+      time make publish-helm
   coverage: '/^total:\s+\(statements\)\s+(\d+\.\d+\%)$/'
   artifacts:
     when:
