--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ workflow:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
       when: never
-    - if: $CI_COMMIT_BRANCH
+    - if: '$CI_COMMIT_BRANCH || $CI_COMMIT_TAG'
 
 .import-devops-core-services: &import-devops-core-services |
   source ${CI_PROJECT_DIR}/.devops.sh
