Rename the chart to nginxaas-operator
While a cosmetic change, it does impact how
dokerhub repo needs to be setup to publish the
helm chart. In addition to that, it impacts what
the user see on k8s itself and it should not be
nginx-loadbalancer-kubernetes as that is
confusing.

--- a/charts/nlk/Chart.yaml
+++ b/charts/nlk/Chart.yaml
@@ -2,7 +2,7 @@
 apiVersion: v2
 appVersion: 0.1.0
 description: NGINX LoadBalancer for Kubernetes
-name: nginx-loadbalancer-kubernetes
+name: nginxaas-operator
 home: https://github.com/nginxinc/nginx-loadbalancer-kubernetes
 icon: https://raw.githubusercontent.com/nginxinc/nginx-loadbalancer-kubernetes/main/nlk-logo.svg
 keywords:
