--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: nlk
     spec:
+      {{- with .Values.nlk.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: {{ include "nlk.image" .}}
