Mount configmap as a volume
With the change to make the operator read a config
file (to reduce code complexity), we need to make
sure that the file exists for the service to
start.

--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -45,4 +45,11 @@ spec:
             initialDelaySeconds: {{ .Values.nlk.readyStatus.initialDelaySeconds }}
             periodSeconds: {{ .Values.nlk.readyStatus.periodSeconds }}
 {{- end }}
+          volumeMounts:
+            - name: config
+              mountPath: /etc/nginxaas-operator
       serviceAccountName: {{ include "nlk.fullname" . }}
+      volumes:
+        - name: config
+          configMap:
+            name: nlk-config
