--- a/charts/nlk/templates/nlk-configmap.yaml
+++ b/charts/nlk/templates/nlk-configmap.yaml
@@ -4,11 +4,11 @@ metadata:
   name: nlk-config
   namespace: nlk
 data:
+  config.yaml: |
 {{- if .Values.nlk.config.entries.hosts }}
-  nginx-hosts: "{{ .Values.nlk.config.entries.hosts }}"
+    nginx-hosts: "{{ .Values.nlk.config.entries.hosts }}"
 {{- end }}
-  tls-mode: "{{ index .Values.nlk.defaultTLS "tls-mode" }}"
-  ca-certificate: "{{ index .Values.nlk.defaultTLS "ca-certificate" }}"
-  client-certificate: "{{ index .Values.nlk.defaultTLS "client-certificate" }}"
-  log-level: "{{ .Values.nlk.logLevel }}"
-
+    tls-mode: "{{ index .Values.nlk.defaultTLS "tls-mode" }}"
+    ca-certificate: "{{ index .Values.nlk.defaultTLS "ca-certificate" }}"
+    client-certificate: "{{ index .Values.nlk.defaultTLS "client-certificate" }}"
+    log-level: "{{ .Values.nlk.logLevel }}"
