NLB-5666: Inject dataplane API key via Helm
THe operator needs the dataplane API Key to
authenticate with the deployment dataplane
endpoint. This commit adds the abailitiy for a
user to supply a key via Helm, create a secret on
their behalf, and then mounts it into the pod.

--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -45,6 +45,12 @@ spec:
             initialDelaySeconds: {{ .Values.nlk.readyStatus.initialDelaySeconds }}
             periodSeconds: {{ .Values.nlk.readyStatus.periodSeconds }}
 {{- end }}
+          env:
+            - name: NGINXAAS_DATAPLANE_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include nlk.apikeyname . }}
+                  key: nginxaasApiKey
           volumeMounts:
             - name: config
               mountPath: /etc/nginxaas-operator
