NLB-5678: Template the namespace
We should respect the user supplied release
namespace in the helm chart instead of hardcoding
it to `nlk`.

--- a/charts/nlk/templates/clusterrolebinding.yaml
+++ b/charts/nlk/templates/clusterrolebinding.yaml
@@ -6,7 +6,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: {{ include "nlk.fullname" . }}
-  namespace: nlk
+  namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: {{ .Release.Namespace }}-{{ include "nlk.fullname" . }}
