--- a/charts/nlk/templates/nlk-secret.yaml
+++ b/charts/nlk/templates/nlk-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "nlk.fullname" . }}
-  namespace: nlk
+  namespace: {{ .Release.Namespace }}
   annotations:
     kubernetes.io/service-account.name: {{ include "nlk.fullname" . }}
 type: kubernetes.io/service-account-token
