--- a/charts/nlk/templates/nlk-serviceaccount.yaml
+++ b/charts/nlk/templates/nlk-serviceaccount.yaml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "nlk.fullname" . }}
-  namespace: nlk
+  namespace: {{ .Release.Namespace }}
 {{- end }}
