--- a/charts/nlk/Chart.yaml
+++ b/charts/nlk/Chart.yaml
@@ -1,10 +1,8 @@
 ---
 apiVersion: v2
 appVersion: 0.1.0
-description: NGINX LoadBalancer for Kubernetes
+description: NGINXaaS LoadBalancer for Kubernetes
 name: nginxaas-operator
-home: https://github.com/nginxinc/nginx-loadbalancer-kubernetes
-icon: https://raw.githubusercontent.com/nginxinc/nginx-loadbalancer-kubernetes/main/nlk-logo.svg
 keywords:
 - nginx
 - nginxaas
