--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - name: NGINXAAS_DATAPLANE_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: {{ include nlk.apikeyname . }}
+                  name: {{ include "nlk.apikeyname" . }}
                   key: nginxaasApiKey
           volumeMounts:
             - name: config
