Default the API Key value in helm
The default is set as not doing so causes helm to
produce an empty secret cause the pod to fail the
secret mount.

This was missed on original testing as I did not
realize that a user could skip specifying the
secret as well.

--- a/charts/nlk/values.yaml
+++ b/charts/nlk/values.yaml
@@ -34,7 +34,8 @@ nlk:
     ca-certificate: ""
     client-certificate: ""
 
-  dataplaneApiKey: ""
+  # Override with your own NGINXaaS dataplane API Key.
+  dataplaneApiKey: "test"
 
   logLevel: "warn"
 
