--- a/charts/nlk/templates/nlk-configmap.yaml
+++ b/charts/nlk/templates/nlk-configmap.yaml
@@ -5,10 +5,13 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
   config.yaml: |
-{{- if .Values.nlk.config.entries.hosts }}
-    nginx-hosts: "{{ .Values.nlk.config.entries.hosts }}"
+{{- with .Values.nlk.config.logLevel }}
+    log-level: "{{ . }}"
 {{- end }}
-    tls-mode: "{{ index .Values.nlk.defaultTLS "tls-mode" }}"
-    ca-certificate: "{{ index .Values.nlk.defaultTLS "ca-certificate" }}"
-    client-certificate: "{{ index .Values.nlk.defaultTLS "client-certificate" }}"
-    log-level: "{{ .Values.nlk.logLevel }}"
+{{- with .Values.nlk.config.nginxHosts }}
+    nginx-hosts: "{{ . }}"
+{{- end }}
+    tls-mode: "{{ .Values.nlk.config.tls.mode }}"
+{{- with .Values.nlk.config.serviceAnnotationMatch }}
+    service-annotation-match: "{{ . }}"
+{{- end }}
