--- a/charts/nlk/templates/nlk-configmap.yaml
+++ b/charts/nlk/templates/nlk-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nlk-config
+  name: {{ include "nlk.configName" . }}
   namespace: {{ .Release.Namespace }}
 data:
   config.yaml: |
