--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -58,4 +58,4 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: nlk-config
+            name: {{ include "nlk.configName" . }}
