Fix up helm and docker versions
This just brings them up to the latest.

--- a/charts/nlk/values.yaml
+++ b/charts/nlk/values.yaml
@@ -10,7 +10,7 @@ nlk:
     repository: nginx/nginxaas-loadbalancer-kubernetes
     pullPolicy: Always
     # Overrides the image tag whose default is the chart appVersion.
-    tag: release-0.1.0
+    tag: 0.2.1
 
   imagePullSecrets: []
   nameOverride: ""
