--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -183,7 +183,7 @@ checkmarx-scan:
   extends:
     - .devops-docker-cicd
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^release-[\d]+\.[\d]+\.[\d]+/'
+    - if: '$CI_COMMIT_TAG =~ /^v[\d]+\.[\d]+\.[\d]+/'
 
 dockerhub-image-release:
   extends:
