NLB-5679 Added checksum field to helm nlk-deployment to force restart on configmap change

--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -14,6 +14,8 @@ spec:
     metadata:
       labels:
         app: nlk
+      annotations:
+        checksum: {{ tpl (toYaml .Values.nlk) . | sha256sum }}
     spec:
       {{- with .Values.nlk.imagePullSecrets }}
       imagePullSecrets:
