NLB-5733: Update Helm chart for Azure Marketplace
Azure requires `global.azure.images` field in the
Chart values so it can parse the Helm chart and
copy them into an Azure-managed/owned ACR.

This commit allows for non-Azure Marketplace users
to continue to use the helm chart regularly and we
will update the Chart values dynamically when we
publish to markerplace to allow for newer
workflows.

--- a/charts/nlk/values.yaml
+++ b/charts/nlk/values.yaml
@@ -6,7 +6,7 @@ global:
     # images:
     #   nlk:
     #     registry: registry-1.docker.io
-    #     repository: nginx/nginxaas-loadbalancer-kubernetes
+    #     image: nginx/nginxaas-loadbalancer-kubernetes
     #     tag: 0.4.0
 #####################################
 nlk:
