NLB-5733: Update Helm chart for Azure Marketplace
Azure requires `global.azure.images` field in the
Chart values so it can parse the Helm chart and
copy them into an Azure-managed/owned ACR.

This commit allows for non-Azure Marketplace users
to continue to use the helm chart regularly and we
will update the Chart values dynamically when we
publish to markerplace to allow for newer
workflows.

--- a/charts/nlk/templates/nlk-deployment.yaml
+++ b/charts/nlk/templates/nlk-deployment.yaml
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         app: nlk
+{{- if .Values.global.azure }}
+        azure-extensions-usage-release-identifier: {{ .Release.Name }}
+{{- end }}
       annotations:
         checksum: {{ tpl (toYaml .Values.nlk) . | sha256sum }}
     spec:
