Add CNAB validation
We should make sure to validate the CNAB bundle as
part of regular work, especially while we are
iterating on NLK.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ stages:
 
 variables:
   DEVTOOLS_IMG: ${DEVOPS_DOCKER_URL_DEFAULT}/nginx-azure-lb/nlb-devtools:latest
+  CNAB_IMG: mcr.microsoft.com/container-package-app:latest
 
 workflow:
   rules:
@@ -105,6 +106,20 @@ lint + unit-test + build:
     expire_in: 3 hours
     reports:
       junit: results/report.xml
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_COMMIT_BRANCH || $CI_MERGE_REQUEST_ID'
+
+validate-cnab:
+  stage: lint+test+build
+  image: $CNAB_IMG
+  extends:
+    - .devops-docker-cicd-large
+  script:
+    - tdnf install -y make wget
+    - wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq && chmod +x /usr/local/bin/yq
+    - make cnab-validate
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
       when: never
