--- a/charts/nlk/templates/clusterrole.yaml
+++ b/charts/nlk/templates/clusterrole.yaml
@@ -13,4 +13,12 @@ rules:
     - get
     - list
     - watch
+  - apiGroups:
+    - discovery.k8s.io
+    resources:
+    - endpointslices
+    verbs:
+    - get
+    - list
+    - watch
 {{- end }}
