--- a/charts/nlk/values.yaml
+++ b/charts/nlk/values.yaml
@@ -18,7 +18,7 @@ nlk:
     repository: nginx/nginxaas-loadbalancer-kubernetes
     pullPolicy: Always
     ## Overrides the image tag whose default is the chart appVersion.
-    tag: 0.4.0
+    # tag: 0.4.0
   imagePullSecrets: []
   nameOverride: ""
   fullnameOverride: ""
