Enable dependency caching

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,23 +33,22 @@ workflow:
 .import-devops-core-services: &import-devops-core-services |
   source ${CI_PROJECT_DIR}/.devops.sh
 
-# Disabld due to: NLB-5341
-# .go-cache:
-#   variables:
-#     GOPATH: $CI_PROJECT_DIR/.go
-#   cache:
-#     key:
-#       files:
-#         - go.mod
-#         - go.sum
-#     paths:
-#       - .go/pkg/mod/
+.go-cache:
+  variables:
+    GOPATH: $CI_PROJECT_DIR/.go
+  cache:
+    key:
+      files:
+        - go.mod
+        - go.sum
+    paths:
+      - .go/pkg/mod/
 
-# .go-cache-readonly:
-#   extends:
-#     - .go-cache
-#   cache:
-#     policy: pull
+.go-cache-readonly:
+  extends:
+    - .go-cache
+  cache:
+    policy: pull
 
 .golang-private: &golang-private
   - |
@@ -66,7 +65,7 @@ workflow:
   image: $DEVTOOLS_IMG
   extends:
     - .default-runner-large
-    # - .go-cache-readonly
+    - .go-cache-readonly
   script:
     - *golang-private
     - time make test
@@ -85,7 +84,7 @@ lint + unit-test + build:
   image: $DEVTOOLS_IMG
   extends:
     - .devops-docker-cicd-large
-    # - .go-cache
+    - .go-cache
   script:
     - *golang-private
     - |
@@ -143,7 +142,7 @@ whitesource-scan:
   stage: lint+test+build
   extends:
     - .default-runner
-    # - .go-cache
+    - .go-cache
     - .whitesource-template-go
   variables:
     PRODUCT_PREFIX: "n4a"
