Skip go-cache while linting
Go cache in the CI is seeded in the project
working directory. We should skip the mod cache
from lint/formatting as it's upstream code and
there are high chances of the linting failing as
upstream lint rules != our lint rules.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -63,6 +63,8 @@ linters-settings:
       - "gitlab.com/f5/nginx/nginxazurelb/azure-resource-provider/internal/dpo/agent/certificates.CertGetRequest"
 
 issues:
+  exclude-dirs:
+    - .go/pkg/mod
   # Exclude configuration
   exclude-rules:
     # Exclude gochecknoinits and gosec from running on tests files
