Fixed up helm templating for nginx-hosts param to support multiple nginx hosts
In order for the nginx-hosts yaml field to be parsed correctly by viper the template needs to:

1. not put double quotes around the value (this causes viper to interpret it as a string)
2. render it as a JSON array rather than a go representation of a slice.

--- a/charts/nlk/templates/nlk-configmap.yaml
+++ b/charts/nlk/templates/nlk-configmap.yaml
@@ -9,7 +9,7 @@ data:
     log-level: "{{ . }}"
 {{- end }}
 {{- with .Values.nlk.config.nginxHosts }}
-    nginx-hosts: "{{ . }}"
+    nginx-hosts: {{ toJson . }}
 {{- end }}
     tls-mode: "{{ .Values.nlk.config.tls.mode }}"
 {{- with .Values.nlk.config.serviceAnnotationMatch }}
